<resources>
    <string name="app_name">Cool Weather App</string>
    <string name="latitude" translatable="false">Latitude</string>
    <string name="longitude" translatable="false">Longitude</string>
    <string name="sea_level_pressure">Sea Level Pressure</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="update">UPDATE</string>
</resources>